Fix spacing around feature callout images

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ nav{
 
 /* Make cards' images smaller */
 .card-img-top{
-    padding: 30px;
+    padding: 30px 30px 0px 30px;
 }
 
 /* Fix spacing of logos on mobile */
